<resources>

    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="highScore">Highscore</string>
    <string name="login">Login</string>
    <string name="title_activity_display_highscore">Highscore</string>
    <string name="app_name">Swedish Sign Alphabet</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Swedish Sign Alphabet</string>
    <string name="title_activity_level_chooser">Choose Difficulty Level</string>
    <string name="first_opt_button">First Button</string>
    <string name="second_opt_button">Second Button</string>
    <string name="third_opt_button">Third Button</string>
    <string name="picture_view">Picture View</string>
    <string name="letter_view">Which letter is this hand sign?</string>
    <string name="word_view">Which word are these hand signs?</string>
    <string name="answer_view">  out of 10 right!</string>
    <string name="average_view">Average time (s):  </string>
    <string name="high_view">A new high score!</string>
    <string name="low_view">Not a new high score.</string>
    <string name="point_view">Points:</string>
    <string name="total_point_view">Total points:</string>
    <string name="next_button">Next</string>
    <string name="main_menu">Main Menu</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="newGame">New Game</string>
    <string name="newPlayer">Log In / New Player</string>
    <string name="level">Level</string>
    <string name="help">Help</string>
    <string name="submit">Submit</string>
    <string name="logged_in">Logged in as</string>
    <string name="logged_out">Not logged in</string>
    <string name="take_photo">Take Photo</string>
    <string name="chooseImage">Choose Image</string>
    <string name="createNewPlayer">Create New Player</string>
    <string name="createPlayer">Create Player</string>
    <string name="one_sign">One Sign</string>
    <string name="two_signs">Two Signs</string>
    <string name="three_signs">Three Signs</string>
    <string name="sound_toggle_view">Sound On/Off:</string>
    <string name="vibration_toggle_view">Vibrations On/Off:</string>
    <string name="volume_view">Sound Volume:</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="title_activity_game_help">Game Help</string>
    <string name="title_activity_alphabet_help">Alphabet Help</string>
    <string name="previous_button">Previous</string>
    <string name="swedish_sign_language">There are many sign language alphabets.
        The swedish sign alphabet was created in 1808 for schooling the deaf.
        Its creator, PerAron Borg, also opened the first swedish school for the deaf.</string>    
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="first_help_page">Welcome to Swedish Sign Alphabet help!
        The first thing you should do is select the New Player button.
        New Game and Settings will remain disabled until you create a player
        profile and login.</string>
    <string name="second_help_page">In our example you can see the player
        Jill already exists, but if this is a new installation, there will be
        no players in the list. You will need to select the Create New Player button.</string>
    <string name="third_help_page">Here you should select the username field and enter
        a name.  It must be at least three letters long.  You may also choose a picture
        with the Choose Picture button, otherwise you are assigned a default picture.</string>
    <string name="fourth_help_page">Here you choose the picture you would like to have
        as your avatar.  When you are finished, you will automatically be returned to the
        previous screen.</string>
    <string name="fifth_help_page">Now that you have a valid name and a picture it is time
        to select the Create New Player button.  This will take you back to the login
        screen.</string>  
    <string name="sixth_help_page">Now you should see your newly created username in the
        list.  Click on and your name will appear at the top of the screen and the login
        button will active.  You always log in from this screen.</string>
    <string name="seventh_help_page">Back in the main menu we see that the New Game and
        Game Settings buttons have activated.  Click on the New Game button to come to
        the next screen where you may choose difficulty and number of letters.</string> 
    <string name="eighth_help_page">Difficulty is chosen with the radio buttons. One
        allows approximately 10 seconds, two allows 5 seconds, and three allows 2 seconds
        to answer, all with greater rewards.  Click on a number of letters to start.</string> 
    <string name="ninth_help_page">The game starts asking you to guess the letter or
        word presented.  The bar at the bottom is your time ticking away.  The three
        buttons with letters are your alternatives.  Press one to choose.</string> 
    <string name="tenth_help_page">Here we answered before time ran out.  The green
        colour, and pleasant noise mean a correct answer. See that points and total
        points have increased, and the next button is now enabled.</string> 
    <string name="eleventh_help_page">In this example we answered incorrectly.  The
        red colour, and unpleasant buzz noise mean a wrong answer.  Points will not
        increase.  We can press the next button to try again.</string>  
    <string name="twelvth_help_page">In this example the ticking stopped and an awful
        beep noise occured.  Time ran out.  We were still able to guess correctly
        after time ran out, but we gain no points for it.</string>
    <string name="thirteenth_help_page">Here is an example of a game with three letters.
        Note there are three sign pictures, and each answer button has three letters.</string> 
    <string name="fourteenth_help_page">After 10 guesses, the game ends.  You learn how
        many you answered right, how fast you answered on average, your total score (not
        pictured) and if it was a new high score for you or not.  If it was, you gain
        applause.</string> 
    <string name="fifteenth_help_page">If you click the high score button from the end
        of the game, or from the main menu, you can view the high score list.  Here we
        see the high scores of both Jill and Anders.</string> 
    <string name="sixteenth_help_page">And this is the sound settings screen.  It can
        be reached through Game Setings from the Main Menu.  Here you can turn sound
        and vibrations on and off, and adjust volume.  We hope this guide helped you!</string> 
                                
</resources>