<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="92dp"
            android:layout_height="81dp"
            android:src="@drawable/ic_launcher"
            android:text="@string/zero"
            android:contentDescription="@string/picture_view" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:singleLine="true"
            android:maxLength="30"
            android:hint="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >
  
    
   	<Button
        android:id="@+id/chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pickImage"
        android:text="@string/chooseImage"
        android:focusable="true" />

	<Button
        android:id="@+id/takePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="takeNewPhoto"
        android:text="@string/take_photo"
        android:focusable="true" />
	
	<Button
        android:id="@+id/createPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createPlayer"
        android:text="@string/createPlayer"
        android:focusable="true" />
    
    
    
    
    
    
    
    
    </LinearLayout>

   

</LinearLayout>