<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<include
	    android:layout_width="302dp"
	    android:layout_height="wrap_content"
	    layout="@layout/user_view" />

    <LinearLayout
        android:id="@+id/linearLayoutUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/previous_page_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="previousPage"            
            android:focusable="true"
            android:text="@string/previous_button" />

        <ImageView
            android:id="@+id/helpPictureView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription="@string/title_activity_game_help"
            android:src="@drawable/new_player_button_screen" />

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_weight="0.61"
            android:textSize="16dp"             
            android:text="@string/newPlayer" />

        <Button
            android:id="@+id/next_page_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="nextPage"            
            android:focusable="true"
            android:text="@string/next_button" />
    </LinearLayout>

</LinearLayout>
</ScrollView>